fix: dialog windth on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 // todo replace with ghostsui 2 when done
+@import 'include-media';
 
 .simple {
     all: unset;
@@ -39,9 +40,9 @@ dialog {
     padding: 32px;
     width: min(80%, 600px);
 
-    // @include media('<600px') {
-    //     min-width: 90%;
-    // }
+    @include media('<600px') {
+        min-width: 90%;
+    }
 
     &[open] {
         display: block;
